--- a/TenVersion/res/layout/preview.xml
+++ b/TenVersion/res/layout/preview.xml
@@ -15,8 +15,9 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="preview" 
-	        android:textSize="20sp"
-	        android:textColor="@android:color/secondary_text_light"/>
+	        android:textSize="28sp"
+	        android:textColor="@android:color/white"
+	       	/>
 	    </ScrollView>
     <Button 
         android:id="@+id/preview_ok_btn"
