--- a/TenVersion/res/layout/dialog_choose_wifi.xml
+++ b/TenVersion/res/layout/dialog_choose_wifi.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dip"
     android:layout_height="wrap_content"
-    android:background="#E30005"
+    android:background="@android:color/darker_gray"
     android:orientation="vertical"
     android:paddingLeft="2dip"
     android:paddingRight="2dip"
@@ -27,5 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/choose_wifi_listview"
         android:layout_marginTop="2dip"
-        android:text="@string/choose_wifi_cancebtn_txt" />
+        android:text="@string/choose_wifi_cancebtn_txt"
+         android:background="@drawable/btn_selector" /> 
 </RelativeLayout>
