--- a/TenVersion/res/layout/dialog_choose_wifi.xml
+++ b/TenVersion/res/layout/dialog_choose_wifi.xml
@@ -12,7 +12,7 @@
 <ListView
         android:id="@+id/choose_wifi_listview"
         android:layout_width="290dip"
-        android:layout_height="wrap_content" 
+        android:layout_height="400dip" 
         android:background="#FFFACD"
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
@@ -28,5 +28,6 @@
         android:layout_below="@id/choose_wifi_listview"
         android:layout_marginTop="2dip"
         android:text="@string/choose_wifi_cancebtn_txt"
-         android:background="@drawable/btn_selector" /> 
+        android:background="@drawable/btn_selector" 
+        /> 
 </RelativeLayout>
