--- a/TenVersion/res/layout/checklist_item_row.xml
+++ b/TenVersion/res/layout/checklist_item_row.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/buddy_rayout"
   android:layout_width="wrap_content"
-  android:layout_height="95px"
+  android:layout_height="50dip"
   >
 <!--  <RelativeLayout
   android:layout_width="60px"
@@ -16,7 +16,7 @@
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
-   android:layout_marginTop="5px"
+   android:layout_marginTop="5dip"
    android:scaleType="centerCrop"
    
  	/>
@@ -28,30 +28,32 @@
   android:layout_marginLeft="72dip"
   android:orientation="horizontal"
   android:layout_centerVertical="true"
-  android:paddingTop="13dp"
-  android:paddingBottom="13dp"
+  android:background="@android:color/transparent"
+  android:paddingTop="10dp"
+  android:paddingBottom="10dp"
 
 >
-<!--   <TextView android:id="@+id/buddy_name"
-   android:layout_width="80px"
-   android:layout_height="wrap_content"
-   android:textColor="#ffffff"
-   android:textSize="18sp"
-   
-  /> -->
   <TextView android:id="@+id/contents"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" 
-    android:textColor="#000000"
+   android:textColor="#1B6B18"
    android:textSize="20sp"
   /> 
   </LinearLayout>
   <ImageButton android:id="@+id/mindelBtn"
-   android:layout_width="40dp"
-   android:layout_height="40dp" 
+   android:layout_width="wrap_content"
+   android:layout_height="wrap_content" 
    android:background="@drawable/ic_launcher"
    android:layout_alignParentLeft="true"
+    android:layout_centerVertical="true"
    android:layout_marginLeft="5dip"
-   android:layout_centerVertical="true"
   />
+
+  
+      <View 
+  		android:layout_width="fill_parent"
+		android:layout_height="3dip"  
+		android:background="@android:color/white"
+	/>
+  
 </RelativeLayout>
