--- a/TenVersion/res/layout/dialog_funlist.xml
+++ b/TenVersion/res/layout/dialog_funlist.xml
@@ -1,30 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dip"
-    android:layout_height="120dip" >
-
- <LinearLayout
-     android:id="@+id/funlist_btnlayout"
-     android:layout_width="fill_parent"
-     android:layout_height="wrap_content"
-     android:layout_alignParentBottom="true"
-     android:orientation="horizontal" >
-
-     <Button
-         android:id="@+id/fundialog_okBtn"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:layout_weight="1"
-         android:text="@string/funlist_okbtn_txt" />
-
-
- </LinearLayout>
- 
+    android:layout_width="240dip"
+    android:layout_height="160dip"
+    android:background="@layout/dialog_shape">
+<LinearLayout
+  android:id="@+id/funlist_title_layout"
+  android:layout_width="fill_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical">
   <TextView
-     android:id="@+id/fundialog_textview"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_above="@id/funlist_btnlayout"
-      />
-   
+        android:id="@+id/funlist_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dip"
+        android:layout_marginBottom="5dip"
+        android:text="@string/funlist_title_txt"
+        android:textColor="#FF6954"
+        android:textSize="22sp"
+        />
+ <View 
+  		android:layout_width="fill_parent"
+		android:layout_height="2dip"  
+		android:background="@android:color/white"
+	/>   
+</LinearLayout> 
+
+    <LinearLayout
+        android:id="@+id/funlist_btnlayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/fundialog_okBtn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/btn_selector"
+            android:text="@string/okbtn_txt" />
+    </LinearLayout>
+    
+    
+    <LinearLayout
+        android:id="@+id/funlist_textlayout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" 
+        android:layout_below="@id/funlist_title_layout"
+        android:layout_above="@id/funlist_btnlayout"
+        android:gravity="center">
+    <TextView
+        android:id="@+id/fundialog_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="18sp"
+         />
+  </LinearLayout>
 </RelativeLayout>
