--- a/TenVersion/res/layout/etclist.xml
+++ b/TenVersion/res/layout/etclist.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background ="@drawable/plants_out"
+     android:background="#F5F8C0"
     >
     
 <!-- button -->
